# labor-3

./: .gitignore  CMakeLists.txt  README.md
c-projekt/src/: ReadComPort.c  SImuliert.c  messung.txt
src/: ReadComPort  ReadComPort.c  SImuliert.c  datenbank.c  datenbank.h  funktionen.h  lookup.c  lookup.h  main.c  messung.txt  schreibliste.c  schreibliste.h  simulation
src/SImuliert.dSYM/Contents/: Info.plist
src/SImuliert.dSYM/Contents/Resources/DWARF/: SImuliert
src/SImuliert.dSYM/Contents/Resources/Relocations/x86_64/: SImuliert.yml
